version 0.3.0 (04/11/2003):

04/09/2003 Bob Rossi <bob_rossi@cox.net>

    * Adding support for reading/writing of command history
    * if tgdb_start fails, the driver cleans up before dying.
    * Set data state to USER_COMMAND before running TAB_COMPLETION
    * Fixed reverse-search-histroy bug where readline would not 
    run command searched for.

04/08/2003 Bob Rossi <bob_rossi@cox.net>

    * Adding Tab completion
    * Allowing feature to force redisplay of readline
    * Adding Change of prompt support

04/03/2003 Bob Rossi <bob_rossi@cox.net>

    * Made tgdb return CURRENT_FILE_UPDATE: This tells the gui the 
    absolute and relative path to the current file. It also tells it 
    the line number. This is enough info for the gui to understand the
    breakpoint files without a large overhead.

04/02/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed tgdb to parse annotations in a new way: tgdb now accepts 
    annotations from gdb in this form '\r+\n\032\032annotation\r+\n'
    This also removes all '\r' from the output that commands parses.
    * Fixed commands.c where it was removing a \r that no longer exists.

04/02/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed rlctx_prog rl_callback_read_char to respect EOF
    * Changed rlctx_prog to respect the exception set in select loop:
    In cygwin, EOF is detected in the exception set. So this needs to 
    be read.

04/01/2003 Bob Rossi <bob_rossi@cox.net>

    * Automatically building getch_driver and input_driver: This is done
    because 'make' seems to be failing to build the programs correctly
    when they are extra's. Its probably a configure problem that needs to
    be solved.
    * tgdb now works on windows XP in cygwin: Fixed creation of home directory.

03/29/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixed all of tgdb's to work with autoconf: All of the files that make up
    tgdb now test to see if a header is available before it is included.

03/28/2003 Bob Rossi <bob_rossi@cox.net>
