@@ -1,3 +1,7 @@
+04/13/2003 Bob Rossi <bob_rossi@cox.net>
+
+    * Removed data_get_prompt() function.
+
 version 0.3.0 (04/11/2003):
 
 04/09/2003 Bob Rossi <bob_rossi@cox.net>
